# Pytorch-ILT

./: .gitignore  main.py  read_kernel.py  simulateImage.py
cuilt/: CMakeLists.txt  CMakeLists.txt.config  README.md  draw.py  hotspot.txt  main.cpp  run.sh
cuilt/Benchmarks/: M1_test1_out.glp  m1U2.glp  m1_straightlines_OPC.glp  m1_straightlines_OPC_shrink.glp
cuilt/cmake/: CMakeCache.txt  Makefile  ProtoBuf.cmake  cmake_install.cmake  cuilt  gflags.cmake  glog.cmake
cuilt/cmake/eval/: Makefile  cmake_install.cmake
cuilt/cmake/ilt/: Makefile  cmake_install.cmake
cuilt/cmake/io/: Makefile
cuilt/cmake/lithosim/: Makefile  cmake_install.cmake
cuilt/cmake/lithosim/pvbandsim/: Makefile  cmake_install.cmake
cuilt/cmake/shapes/: Makefile  cmake_install.cmake
cuilt/cmake/utils/: Makefile
cuilt/dls-ilt/: CMakeLists.txt
cuilt/eval/: CMakeLists.txt  epeChecker.cpp  epeChecker.h
cuilt/evaluation/Kernels/: Kernels
cuilt/ilt/: CMakeLists.txt  opc.cpp  opc.h
cuilt/io/: CMakeLists.txt  io.cpp  io.h
cuilt/levelSet/: CMakeLists.txt  levelset.cpp  levelset.h
cuilt/lithosim/: CMakeLists.txt  lithosimWrapper.cpp  lithosimWrapper.h
cuilt/lithosim/pvbandsim/: CMakeLists.txt  _kiss_fft_guts.h  agsUtil.cpp  agsUtil.h  glpParse.c  glpParse.cpp  glpParse.h  kernels.h  kiss_fft.c  kiss_fft.cpp  kiss_fft.h  kiss_fftnd.c  kiss_fftnd.cpp  layoutrw.h  lithosim.h  lodepng.c  lodepng.cpp  lodepng.h  parse.c  parse.cpp  parse.h  parse_error.c  parse_error.cpp  parse_error.h  parse_new.cpp  parse_new.h  parse_print.c  parse_print.cpp  parse_print.h  parse_types.h  pvbandsim.cpp  pvbandsim.h  write_png.h
cuilt/lithosim/pvbandsim_gpu/: CMakeLists.txt  cufftShift.h  cufftShiftShared.h  cufftShift_2D_OP.cu  cufftShift_2D_OP_impl.cu  kiss_fft.h  kiss_fftnd.cu  kiss_fftnd_cuda.h  my_shift.cu  my_shift_cuda.h
cuilt/proto/: cuilt.pb.cc  cuilt.pb.h  cuilt.proto
cuilt/shapes/: CMakeLists.txt  design.cpp  design.h  shape.cpp  shape.h
cuilt/utils/: CMakeLists.txt  cmdline.h  debug.cpp  debug.h  exception.h
eval/: __init__.py  constant.py  epe_checker.py  epe_sample.py
ilt/: __init__.py  constant.py  hammer.py  logger.py  model_without_train.py  opc.py  record.txt  simulateImage.py  simulate_image.py  simulator.py  simulator2.py  sraf.py  utils.py
ilt/experiment/: case1.txt  case1.txt_loss.txt  case10.txt  case10.txt_pvband.txt  case2.txt  case2.txt_epe.txt  case2.txt_pvband.txt  case3.txt  case3.txt_loss.txt  case3.txt_pvband.txt  case4.txt  case4.txt_pvband.txt  case5.txt  case5.txt_loss.txt  case5.txt_pvband.txt  case6.txt  case6.txt_pvband.txt  case7.txt  case8.txt  case9.txt  case9.txt_epe.txt  case9.txt_loss.txt  case9.txt_pvband.txt  data_extract.py  data_extract.py_pvband.txt
ilt/experiment/log1/: case1.txt  case1.txt_pvband.txt  case10.txt  case2.txt_loss.txt  case3.txt_epe.txt  case4.txt  case4.txt_loss.txt  case5.txt  case6.txt  case6.txt_epe.txt  case6.txt_loss.txt  case7.txt  case7.txt_epe.txt  case7.txt_pvband.txt  case8.txt  case8.txt_epe.txt  case8.txt_pvband.txt  data_extract.py_epe.txt  data_extract.py_loss.txt
ilt/experiment/log2/: case01.txt  case01.txt_epe.txt  case01.txt_loss.txt  case02.txt  case02.txt_pvband.txt  case03.txt  case03.txt_epe.txt  case03.txt_loss.txt  case03.txt_pvband.txt  case04.txt  case04.txt_epe.txt  case05.txt  case06.txt  case06.txt_epe.txt  case06.txt_loss.txt  case07.txt  case07.txt_pvband.txt  case08.txt  case08.txt_pvband.txt  case09.txt  case09.txt_loss.txt  case09.txt_pvband.txt  case10.txt  (+2 more)
ilt/utils/: __init__.py  is_convex.py  is_pixel_on.py  simulate_image.py  simulate_image2.py  test_image.py  test_init_complex_mask.py  test_kernel.py  test_mask.py  write_png.py
kernels/: dumpkernel.py  kernel.py  read_kernel.py
kernels/kernels/: combo_ct_defocus.pt  combo_ct_focus.pt  combo_defocus.pt  combo_focus.pt  ct_defocus.pt  ct_focus.pt  defocus.pt  focus.pt
kernels/scales/: combo.pt  defocus.pt  focus.pt
l2ilt/kernels/: dumpkernel.py
l2ilt/temp/: dataset.py  dataset2.py  kernel2.py  model_with_train.py  model_with_train2.py
shapes/: __init__.py  design.py  shape.py
unittest/: a.out  check_samples.py  check_weight.py  epe_sample_py.txt  epe_weight_cpp.txt  epe_weight_py.txt  test.ipynb  test2.txt  test_fft.py  test_function_call_cost.py  test_isdigit.cpp  test_logic.cpp  test_new.cpp  test_pos.cpp  test_precision.cpp  test_set.cpp  test_set.py  tools.md
(+75 files in other folders)
