cmake_minimum_required(VERSION 3.9)

project(pvsim_gpu LANGUAGES CUDA)

find_package(CUDA)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -lcufft)

set(PVSIMGPU_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB FFT_SOURCES "${PVSIMGPU_ROOT_DIR}/*cu")
set(PVSIMGPU_SOURCES "${PVSIMGPU_SOURCES};${FFT_SOURCES}")
set(PVSIMGPU_INCLUDE_DIR ${PROJECT_ROOT_DIR})
list(APPEND PVSIMGPU_INCLUDE_DIR ${PVSIMGPU_ROOT_DIR})

message(STATUS "pvsim include dir: ${PVSIMGPU_INCLUDE_DIR}")
include_directories(${PVSIMGPU_INCLUDE_DIR})
include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})

add_library(pvsim_gpu SHARED ${PVSIMGPU_SOURCES})
target_link_libraries(pvsim_gpu ${CUDA_CUFFT_LIBRARIES})
